--- a/composer.json
+++ b/composer.json
@@ -10,66 +10,67 @@
     ],
     "require": [],
     "conflict": {
-        "symfony/amazon-mailer": "<4.3 || >=4.4",
-        "symfony/asset": "<4.3 || >=4.4",
-        "symfony/browser-kit": "<4.3 || >=4.4",
-        "symfony/cache": "<4.3 || >=4.4",
-        "symfony/config": "<4.3 || >=4.4",
-        "symfony/console": "<4.3 || >=4.4",
-        "symfony/css-selector": "<4.3 || >=4.4",
-        "symfony/debug": "<4.3 || >=4.4",
-        "symfony/debug-bundle": "<4.3 || >=4.4",
-        "symfony/dependency-injection": "<4.3 || >=4.4",
-        "symfony/doctrine-bridge": "<4.3 || >=4.4",
-        "symfony/dom-crawler": "<4.3 || >=4.4",
-        "symfony/dotenv": "<4.3 || >=4.4",
-        "symfony/event-dispatcher": "<4.3 || >=4.4",
-        "symfony/expression-language": "<4.3 || >=4.4",
-        "symfony/filesystem": "<4.3 || >=4.4",
-        "symfony/finder": "<4.3 || >=4.4",
-        "symfony/form": "<4.3 || >=4.4",
-        "symfony/framework-bundle": "<4.3 || >=4.4",
-        "symfony/google-mailer": "<4.3 || >=4.4",
-        "symfony/http-client": "<4.3 || >=4.4",
-        "symfony/http-foundation": "<4.3 || >=4.4",
-        "symfony/http-kernel": "<4.3 || >=4.4",
-        "symfony/inflector": "<4.3 || >=4.4",
-        "symfony/intl": "<4.3 || >=4.4",
-        "symfony/ldap": "<4.3 || >=4.4",
-        "symfony/lock": "<4.3 || >=4.4",
-        "symfony/mailchimp-mailer": "<4.3 || >=4.4",
-        "symfony/mailer": "<4.3 || >=4.4",
-        "symfony/mailgun-mailer": "<4.3 || >=4.4",
-        "symfony/messenger": "<4.3 || >=4.4",
-        "symfony/mime": "<4.3 || >=4.4",
-        "symfony/monolog-bridge": "<4.3 || >=4.4",
-        "symfony/options-resolver": "<4.3 || >=4.4",
-        "symfony/postmark-mailer": "<4.3 || >=4.4",
-        "symfony/process": "<4.3 || >=4.4",
-        "symfony/property-access": "<4.3 || >=4.4",
-        "symfony/property-info": "<4.3 || >=4.4",
-        "symfony/proxy-manager-bridge": "<4.3 || >=4.4",
-        "symfony/routing": "<4.3 || >=4.4",
-        "symfony/security": "<4.3 || >=4.4",
-        "symfony/security-bundle": "<4.3 || >=4.4",
-        "symfony/security-core": "<4.3 || >=4.4",
-        "symfony/security-csrf": "<4.3 || >=4.4",
-        "symfony/security-guard": "<4.3 || >=4.4",
-        "symfony/security-http": "<4.3 || >=4.4",
-        "symfony/sendgrid-mailer": "<4.3 || >=4.4",
-        "symfony/serializer": "<4.3 || >=4.4",
-        "symfony/stopwatch": "<4.3 || >=4.4",
-        "symfony/templating": "<4.3 || >=4.4",
-        "symfony/translation": "<4.3 || >=4.4",
-        "symfony/twig-bridge": "<4.3 || >=4.4",
-        "symfony/twig-bundle": "<4.3 || >=4.4",
-        "symfony/validator": "<4.3 || >=4.4",
-        "symfony/var-dumper": "<4.3 || >=4.4",
-        "symfony/var-exporter": "<4.3 || >=4.4",
-        "symfony/web-link": "<4.3 || >=4.4",
-        "symfony/web-profiler-bundle": "<4.3 || >=4.4",
-        "symfony/web-server-bundle": "<4.3 || >=4.4",
-        "symfony/workflow": "<4.3 || >=4.4",
-        "symfony/yaml": "<4.3 || >=4.4"
+        "symfony/amazon-mailer": "<4.4 || >=4.5",
+        "symfony/asset": "<4.4 || >=4.5",
+        "symfony/browser-kit": "<4.4 || >=4.5",
+        "symfony/cache": "<4.4 || >=4.5",
+        "symfony/config": "<4.4 || >=4.5",
+        "symfony/console": "<4.4 || >=4.5",
+        "symfony/css-selector": "<4.4 || >=4.5",
+        "symfony/debug": "<4.4 || >=4.5",
+        "symfony/debug-bundle": "<4.4 || >=4.5",
+        "symfony/dependency-injection": "<4.4 || >=4.5",
+        "symfony/doctrine-bridge": "<4.4 || >=4.5",
+        "symfony/dom-crawler": "<4.4 || >=4.5",
+        "symfony/dotenv": "<4.4 || >=4.5",
+        "symfony/error-handler": "<4.4 || >=4.5",
+        "symfony/event-dispatcher": "<4.4 || >=4.5",
+        "symfony/expression-language": "<4.4 || >=4.5",
+        "symfony/filesystem": "<4.4 || >=4.5",
+        "symfony/finder": "<4.4 || >=4.5",
+        "symfony/form": "<4.4 || >=4.5",
+        "symfony/framework-bundle": "<4.4 || >=4.5",
+        "symfony/google-mailer": "<4.4 || >=4.5",
+        "symfony/http-client": "<4.4 || >=4.5",
+        "symfony/http-foundation": "<4.4 || >=4.5",
+        "symfony/http-kernel": "<4.4 || >=4.5",
+        "symfony/inflector": "<4.4 || >=4.5",
+        "symfony/intl": "<4.4 || >=4.5",
+        "symfony/ldap": "<4.4 || >=4.5",
+        "symfony/lock": "<4.4 || >=4.5",
+        "symfony/mailchimp-mailer": "<4.4 || >=4.5",
+        "symfony/mailer": "<4.4 || >=4.5",
+        "symfony/mailgun-mailer": "<4.4 || >=4.5",
+        "symfony/messenger": "<4.4 || >=4.5",
+        "symfony/mime": "<4.4 || >=4.5",
+        "symfony/monolog-bridge": "<4.4 || >=4.5",
+        "symfony/options-resolver": "<4.4 || >=4.5",
+        "symfony/postmark-mailer": "<4.4 || >=4.5",
+        "symfony/process": "<4.4 || >=4.5",
+        "symfony/property-access": "<4.4 || >=4.5",
+        "symfony/property-info": "<4.4 || >=4.5",
+        "symfony/proxy-manager-bridge": "<4.4 || >=4.5",
+        "symfony/routing": "<4.4 || >=4.5",
+        "symfony/security": "<4.4 || >=4.5",
+        "symfony/security-bundle": "<4.4 || >=4.5",
+        "symfony/security-core": "<4.4 || >=4.5",
+        "symfony/security-csrf": "<4.4 || >=4.5",
+        "symfony/security-guard": "<4.4 || >=4.5",
+        "symfony/security-http": "<4.4 || >=4.5",
+        "symfony/sendgrid-mailer": "<4.4 || >=4.5",
+        "symfony/serializer": "<4.4 || >=4.5",
+        "symfony/stopwatch": "<4.4 || >=4.5",
+        "symfony/templating": "<4.4 || >=4.5",
+        "symfony/translation": "<4.4 || >=4.5",
+        "symfony/twig-bridge": "<4.4 || >=4.5",
+        "symfony/twig-bundle": "<4.4 || >=4.5",
+        "symfony/validator": "<4.4 || >=4.5",
+        "symfony/var-dumper": "<4.4 || >=4.5",
+        "symfony/var-exporter": "<4.4 || >=4.5",
+        "symfony/web-link": "<4.4 || >=4.5",
+        "symfony/web-profiler-bundle": "<4.4 || >=4.5",
+        "symfony/web-server-bundle": "<4.4 || >=4.5",
+        "symfony/workflow": "<4.4 || >=4.5",
+        "symfony/yaml": "<4.4 || >=4.5"
     }
 }
