--- a/composer.json
+++ b/composer.json
@@ -10,55 +10,56 @@
     ],
     "require": [],
     "conflict": {
-        "symfony/asset": "<4.0 || >=4.1",
-        "symfony/browser-kit": "<4.0 || >=4.1",
-        "symfony/cache": "<4.0 || >=4.1",
-        "symfony/config": "<4.0 || >=4.1",
-        "symfony/console": "<4.0 || >=4.1",
-        "symfony/css-selector": "<4.0 || >=4.1",
-        "symfony/debug": "<4.0 || >=4.1",
-        "symfony/debug-bundle": "<4.0 || >=4.1",
-        "symfony/dependency-injection": "<4.0 || >=4.1",
-        "symfony/doctrine-bridge": "<4.0 || >=4.1",
-        "symfony/dom-crawler": "<4.0 || >=4.1",
-        "symfony/dotenv": "<4.0 || >=4.1",
-        "symfony/event-dispatcher": "<4.0 || >=4.1",
-        "symfony/expression-language": "<4.0 || >=4.1",
-        "symfony/filesystem": "<4.0 || >=4.1",
-        "symfony/finder": "<4.0 || >=4.1",
-        "symfony/form": "<4.0 || >=4.1",
-        "symfony/framework-bundle": "<4.0 || >=4.1",
-        "symfony/http-foundation": "<4.0 || >=4.1",
-        "symfony/http-kernel": "<4.0 || >=4.1",
-        "symfony/inflector": "<4.0 || >=4.1",
-        "symfony/intl": "<4.0 || >=4.1",
-        "symfony/ldap": "<4.0 || >=4.1",
-        "symfony/lock": "<4.0 || >=4.1",
-        "symfony/monolog-bridge": "<4.0 || >=4.1",
-        "symfony/options-resolver": "<4.0 || >=4.1",
-        "symfony/process": "<4.0 || >=4.1",
-        "symfony/property-access": "<4.0 || >=4.1",
-        "symfony/property-info": "<4.0 || >=4.1",
-        "symfony/proxy-manager-bridge": "<4.0 || >=4.1",
-        "symfony/routing": "<4.0 || >=4.1",
-        "symfony/security": "<4.0 || >=4.1",
-        "symfony/security-bundle": "<4.0 || >=4.1",
-        "symfony/security-core": "<4.0 || >=4.1",
-        "symfony/security-csrf": "<4.0 || >=4.1",
-        "symfony/security-guard": "<4.0 || >=4.1",
-        "symfony/security-http": "<4.0 || >=4.1",
-        "symfony/serializer": "<4.0 || >=4.1",
-        "symfony/stopwatch": "<4.0 || >=4.1",
-        "symfony/templating": "<4.0 || >=4.1",
-        "symfony/translation": "<4.0 || >=4.1",
-        "symfony/twig-bridge": "<4.0 || >=4.1",
-        "symfony/twig-bundle": "<4.0 || >=4.1",
-        "symfony/validator": "<4.0 || >=4.1",
-        "symfony/var-dumper": "<4.0 || >=4.1",
-        "symfony/web-link": "<4.0 || >=4.1",
-        "symfony/web-profiler-bundle": "<4.0 || >=4.1",
-        "symfony/web-server-bundle": "<4.0 || >=4.1",
-        "symfony/workflow": "<4.0 || >=4.1",
-        "symfony/yaml": "<4.0 || >=4.1"
+        "symfony/asset": "<4.1 || >=4.2",
+        "symfony/browser-kit": "<4.1 || >=4.2",
+        "symfony/cache": "<4.1 || >=4.2",
+        "symfony/config": "<4.1 || >=4.2",
+        "symfony/console": "<4.1 || >=4.2",
+        "symfony/css-selector": "<4.1 || >=4.2",
+        "symfony/debug": "<4.1 || >=4.2",
+        "symfony/debug-bundle": "<4.1 || >=4.2",
+        "symfony/dependency-injection": "<4.1 || >=4.2",
+        "symfony/doctrine-bridge": "<4.1 || >=4.2",
+        "symfony/dom-crawler": "<4.1 || >=4.2",
+        "symfony/dotenv": "<4.1 || >=4.2",
+        "symfony/event-dispatcher": "<4.1 || >=4.2",
+        "symfony/expression-language": "<4.1 || >=4.2",
+        "symfony/filesystem": "<4.1 || >=4.2",
+        "symfony/finder": "<4.1 || >=4.2",
+        "symfony/form": "<4.1 || >=4.2",
+        "symfony/framework-bundle": "<4.1 || >=4.2",
+        "symfony/http-foundation": "<4.1 || >=4.2",
+        "symfony/http-kernel": "<4.1 || >=4.2",
+        "symfony/inflector": "<4.1 || >=4.2",
+        "symfony/intl": "<4.1 || >=4.2",
+        "symfony/ldap": "<4.1 || >=4.2",
+        "symfony/lock": "<4.1 || >=4.2",
+        "symfony/messenger": "<4.1 || >=4.2",
+        "symfony/monolog-bridge": "<4.1 || >=4.2",
+        "symfony/options-resolver": "<4.1 || >=4.2",
+        "symfony/process": "<4.1 || >=4.2",
+        "symfony/property-access": "<4.1 || >=4.2",
+        "symfony/property-info": "<4.1 || >=4.2",
+        "symfony/proxy-manager-bridge": "<4.1 || >=4.2",
+        "symfony/routing": "<4.1 || >=4.2",
+        "symfony/security": "<4.1 || >=4.2",
+        "symfony/security-bundle": "<4.1 || >=4.2",
+        "symfony/security-core": "<4.1 || >=4.2",
+        "symfony/security-csrf": "<4.1 || >=4.2",
+        "symfony/security-guard": "<4.1 || >=4.2",
+        "symfony/security-http": "<4.1 || >=4.2",
+        "symfony/serializer": "<4.1 || >=4.2",
+        "symfony/stopwatch": "<4.1 || >=4.2",
+        "symfony/templating": "<4.1 || >=4.2",
+        "symfony/translation": "<4.1 || >=4.2",
+        "symfony/twig-bridge": "<4.1 || >=4.2",
+        "symfony/twig-bundle": "<4.1 || >=4.2",
+        "symfony/validator": "<4.1 || >=4.2",
+        "symfony/var-dumper": "<4.1 || >=4.2",
+        "symfony/web-link": "<4.1 || >=4.2",
+        "symfony/web-profiler-bundle": "<4.1 || >=4.2",
+        "symfony/web-server-bundle": "<4.1 || >=4.2",
+        "symfony/workflow": "<4.1 || >=4.2",
+        "symfony/yaml": "<4.1 || >=4.2"
     }
 }
