--- a/composer.json
+++ b/composer.json
@@ -10,71 +10,82 @@
     ],
     "require": [],
     "conflict": {
-        "symfony/amazon-mailer": "<5.0 || >=5.1",
-        "symfony/asset": "<5.0 || >=5.1",
-        "symfony/browser-kit": "<5.0 || >=5.1",
-        "symfony/cache": "<5.0 || >=5.1",
-        "symfony/config": "<5.0 || >=5.1",
-        "symfony/console": "<5.0 || >=5.1",
-        "symfony/css-selector": "<5.0 || >=5.1",
-        "symfony/debug-bundle": "<5.0 || >=5.1",
-        "symfony/dependency-injection": "<5.0 || >=5.1",
-        "symfony/doctrine-bridge": "<5.0 || >=5.1",
-        "symfony/dom-crawler": "<5.0 || >=5.1",
-        "symfony/dotenv": "<5.0 || >=5.1",
-        "symfony/error-handler": "<5.0 || >=5.1",
-        "symfony/event-dispatcher": "<5.0 || >=5.1",
-        "symfony/expression-language": "<5.0 || >=5.1",
-        "symfony/filesystem": "<5.0 || >=5.1",
-        "symfony/finder": "<5.0 || >=5.1",
-        "symfony/form": "<5.0 || >=5.1",
-        "symfony/framework-bundle": "<5.0 || >=5.1",
-        "symfony/google-mailer": "<5.0 || >=5.1",
-        "symfony/http-client": "<5.0 || >=5.1",
-        "symfony/http-foundation": "<5.0 || >=5.1",
-        "symfony/http-kernel": "<5.0 || >=5.1",
-        "symfony/inflector": "<5.0 || >=5.1",
-        "symfony/intl": "<5.0 || >=5.1",
-        "symfony/ldap": "<5.0 || >=5.1",
-        "symfony/lock": "<5.0 || >=5.1",
-        "symfony/mailchimp-mailer": "<5.0 || >=5.1",
-        "symfony/mailer": "<5.0 || >=5.1",
-        "symfony/mailgun-mailer": "<5.0 || >=5.1",
-        "symfony/messenger": "<5.0 || >=5.1",
-        "symfony/mime": "<5.0 || >=5.1",
-        "symfony/monolog-bridge": "<5.0 || >=5.1",
-        "symfony/nexmo-notifier": "<5.0 || >=5.1",
-        "symfony/notifier": "<5.0 || >=5.1",
-        "symfony/options-resolver": "<5.0 || >=5.1",
-        "symfony/postmark-mailer": "<5.0 || >=5.1",
-        "symfony/process": "<5.0 || >=5.1",
-        "symfony/property-access": "<5.0 || >=5.1",
-        "symfony/property-info": "<5.0 || >=5.1",
-        "symfony/proxy-manager-bridge": "<5.0 || >=5.1",
-        "symfony/routing": "<5.0 || >=5.1",
-        "symfony/security": "<5.0 || >=5.1",
-        "symfony/security-bundle": "<5.0 || >=5.1",
-        "symfony/security-core": "<5.0 || >=5.1",
-        "symfony/security-csrf": "<5.0 || >=5.1",
-        "symfony/security-guard": "<5.0 || >=5.1",
-        "symfony/security-http": "<5.0 || >=5.1",
-        "symfony/sendgrid-mailer": "<5.0 || >=5.1",
-        "symfony/serializer": "<5.0 || >=5.1",
-        "symfony/slack-notifier": "<5.0 || >=5.1",
-        "symfony/stopwatch": "<5.0 || >=5.1",
-        "symfony/string": "<5.0 || >=5.1",
-        "symfony/telegram-notifier": "<5.0 || >=5.1",
-        "symfony/templating": "<5.0 || >=5.1",
-        "symfony/translation": "<5.0 || >=5.1",
-        "symfony/twig-bridge": "<5.0 || >=5.1",
-        "symfony/twig-bundle": "<5.0 || >=5.1",
-        "symfony/twilio-notifier": "<5.0 || >=5.1",
-        "symfony/validator": "<5.0 || >=5.1",
-        "symfony/var-dumper": "<5.0 || >=5.1",
-        "symfony/var-exporter": "<5.0 || >=5.1",
-        "symfony/web-link": "<5.0 || >=5.1",
-        "symfony/web-profiler-bundle": "<5.0 || >=5.1",
-        "symfony/workflow": "<5.0 || >=5.1",
-        "symfony/yaml": "<5.0 || >=5.1"
+        "symfony/amazon-mailer": "<5.1 || >=5.2",
+        "symfony/amazon-sqs-messenger": "<5.1 || >=5.2",
+        "symfony/amqp-messenger": "<5.1 || >=5.2",
+        "symfony/asset": "<5.1 || >=5.2",
+        "symfony/browser-kit": "<5.1 || >=5.2",
+        "symfony/cache": "<5.1 || >=5.2",
+        "symfony/config": "<5.1 || >=5.2",
+        "symfony/console": "<5.1 || >=5.2",
+        "symfony/css-selector": "<5.1 || >=5.2",
+        "symfony/debug-bundle": "<5.1 || >=5.2",
+        "symfony/dependency-injection": "<5.1 || >=5.2",
+        "symfony/doctrine-bridge": "<5.1 || >=5.2",
+        "symfony/doctrine-messenger": "<5.1 || >=5.2",
+        "symfony/dom-crawler": "<5.1 || >=5.2",
+        "symfony/dotenv": "<5.1 || >=5.2",
+        "symfony/error-handler": "<5.1 || >=5.2",
+        "symfony/event-dispatcher": "<5.1 || >=5.2",
+        "symfony/expression-language": "<5.1 || >=5.2",
+        "symfony/filesystem": "<5.1 || >=5.2",
+        "symfony/finder": "<5.1 || >=5.2",
+        "symfony/firebase-notifier": "<5.1 || >=5.2",
+        "symfony/form": "<5.1 || >=5.2",
+        "symfony/framework-bundle": "<5.1 || >=5.2",
+        "symfony/free-mobile-notifier": "<5.1 || >=5.2",
+        "symfony/google-mailer": "<5.1 || >=5.2",
+        "symfony/http-client": "<5.1 || >=5.2",
+        "symfony/http-foundation": "<5.1 || >=5.2",
+        "symfony/http-kernel": "<5.1 || >=5.2",
+        "symfony/inflector": "<5.1 || >=5.2",
+        "symfony/intl": "<5.1 || >=5.2",
+        "symfony/ldap": "<5.1 || >=5.2",
+        "symfony/lock": "<5.1 || >=5.2",
+        "symfony/mailchimp-mailer": "<5.1 || >=5.2",
+        "symfony/mailer": "<5.1 || >=5.2",
+        "symfony/mailgun-mailer": "<5.1 || >=5.2",
+        "symfony/mattermost-notifier": "<5.1 || >=5.2",
+        "symfony/messenger": "<5.1 || >=5.2",
+        "symfony/mime": "<5.1 || >=5.2",
+        "symfony/monolog-bridge": "<5.1 || >=5.2",
+        "symfony/nexmo-notifier": "<5.1 || >=5.2",
+        "symfony/notifier": "<5.1 || >=5.2",
+        "symfony/options-resolver": "<5.1 || >=5.2",
+        "symfony/ovh-cloud-notifier": "<5.1 || >=5.2",
+        "symfony/postmark-mailer": "<5.1 || >=5.2",
+        "symfony/process": "<5.1 || >=5.2",
+        "symfony/property-access": "<5.1 || >=5.2",
+        "symfony/property-info": "<5.1 || >=5.2",
+        "symfony/proxy-manager-bridge": "<5.1 || >=5.2",
+        "symfony/redis-messenger": "<5.1 || >=5.2",
+        "symfony/rocket-chat-notifier": "<5.1 || >=5.2",
+        "symfony/routing": "<5.1 || >=5.2",
+        "symfony/security": "<5.1 || >=5.2",
+        "symfony/security-bundle": "<5.1 || >=5.2",
+        "symfony/security-core": "<5.1 || >=5.2",
+        "symfony/security-csrf": "<5.1 || >=5.2",
+        "symfony/security-guard": "<5.1 || >=5.2",
+        "symfony/security-http": "<5.1 || >=5.2",
+        "symfony/sendgrid-mailer": "<5.1 || >=5.2",
+        "symfony/serializer": "<5.1 || >=5.2",
+        "symfony/sinch-notifier": "<5.1 || >=5.2",
+        "symfony/slack-notifier": "<5.1 || >=5.2",
+        "symfony/stopwatch": "<5.1 || >=5.2",
+        "symfony/string": "<5.1 || >=5.2",
+        "symfony/telegram-notifier": "<5.1 || >=5.2",
+        "symfony/templating": "<5.1 || >=5.2",
+        "symfony/translation": "<5.1 || >=5.2",
+        "symfony/twig-bridge": "<5.1 || >=5.2",
+        "symfony/twig-bundle": "<5.1 || >=5.2",
+        "symfony/twilio-notifier": "<5.1 || >=5.2",
+        "symfony/uid": "<5.1 || >=5.2",
+        "symfony/validator": "<5.1 || >=5.2",
+        "symfony/var-dumper": "<5.1 || >=5.2",
+        "symfony/var-exporter": "<5.1 || >=5.2",
+        "symfony/web-link": "<5.1 || >=5.2",
+        "symfony/web-profiler-bundle": "<5.1 || >=5.2",
+        "symfony/workflow": "<5.1 || >=5.2",
+        "symfony/yaml": "<5.1 || >=5.2"
     }
 }
