--- a/composer.json
+++ b/composer.json
@@ -10,67 +10,71 @@
     ],
     "require": [],
     "conflict": {
-        "symfony/amazon-mailer": "<4.4 || >=4.5",
-        "symfony/asset": "<4.4 || >=4.5",
-        "symfony/browser-kit": "<4.4 || >=4.5",
-        "symfony/cache": "<4.4 || >=4.5",
-        "symfony/config": "<4.4 || >=4.5",
-        "symfony/console": "<4.4 || >=4.5",
-        "symfony/css-selector": "<4.4 || >=4.5",
-        "symfony/debug": "<4.4 || >=4.5",
-        "symfony/debug-bundle": "<4.4 || >=4.5",
-        "symfony/dependency-injection": "<4.4 || >=4.5",
-        "symfony/doctrine-bridge": "<4.4 || >=4.5",
-        "symfony/dom-crawler": "<4.4 || >=4.5",
-        "symfony/dotenv": "<4.4 || >=4.5",
-        "symfony/error-handler": "<4.4 || >=4.5",
-        "symfony/event-dispatcher": "<4.4 || >=4.5",
-        "symfony/expression-language": "<4.4 || >=4.5",
-        "symfony/filesystem": "<4.4 || >=4.5",
-        "symfony/finder": "<4.4 || >=4.5",
-        "symfony/form": "<4.4 || >=4.5",
-        "symfony/framework-bundle": "<4.4 || >=4.5",
-        "symfony/google-mailer": "<4.4 || >=4.5",
-        "symfony/http-client": "<4.4 || >=4.5",
-        "symfony/http-foundation": "<4.4 || >=4.5",
-        "symfony/http-kernel": "<4.4 || >=4.5",
-        "symfony/inflector": "<4.4 || >=4.5",
-        "symfony/intl": "<4.4 || >=4.5",
-        "symfony/ldap": "<4.4 || >=4.5",
-        "symfony/lock": "<4.4 || >=4.5",
-        "symfony/mailchimp-mailer": "<4.4 || >=4.5",
-        "symfony/mailer": "<4.4 || >=4.5",
-        "symfony/mailgun-mailer": "<4.4 || >=4.5",
-        "symfony/messenger": "<4.4 || >=4.5",
-        "symfony/mime": "<4.4 || >=4.5",
-        "symfony/monolog-bridge": "<4.4 || >=4.5",
-        "symfony/options-resolver": "<4.4 || >=4.5",
-        "symfony/postmark-mailer": "<4.4 || >=4.5",
-        "symfony/process": "<4.4 || >=4.5",
-        "symfony/property-access": "<4.4 || >=4.5",
-        "symfony/property-info": "<4.4 || >=4.5",
-        "symfony/proxy-manager-bridge": "<4.4 || >=4.5",
-        "symfony/routing": "<4.4 || >=4.5",
-        "symfony/security": "<4.4 || >=4.5",
-        "symfony/security-bundle": "<4.4 || >=4.5",
-        "symfony/security-core": "<4.4 || >=4.5",
-        "symfony/security-csrf": "<4.4 || >=4.5",
-        "symfony/security-guard": "<4.4 || >=4.5",
-        "symfony/security-http": "<4.4 || >=4.5",
-        "symfony/sendgrid-mailer": "<4.4 || >=4.5",
-        "symfony/serializer": "<4.4 || >=4.5",
-        "symfony/stopwatch": "<4.4 || >=4.5",
-        "symfony/templating": "<4.4 || >=4.5",
-        "symfony/translation": "<4.4 || >=4.5",
-        "symfony/twig-bridge": "<4.4 || >=4.5",
-        "symfony/twig-bundle": "<4.4 || >=4.5",
-        "symfony/validator": "<4.4 || >=4.5",
-        "symfony/var-dumper": "<4.4 || >=4.5",
-        "symfony/var-exporter": "<4.4 || >=4.5",
-        "symfony/web-link": "<4.4 || >=4.5",
-        "symfony/web-profiler-bundle": "<4.4 || >=4.5",
-        "symfony/web-server-bundle": "<4.4 || >=4.5",
-        "symfony/workflow": "<4.4 || >=4.5",
-        "symfony/yaml": "<4.4 || >=4.5"
+        "symfony/amazon-mailer": "<5.0 || >=5.1",
+        "symfony/asset": "<5.0 || >=5.1",
+        "symfony/browser-kit": "<5.0 || >=5.1",
+        "symfony/cache": "<5.0 || >=5.1",
+        "symfony/config": "<5.0 || >=5.1",
+        "symfony/console": "<5.0 || >=5.1",
+        "symfony/css-selector": "<5.0 || >=5.1",
+        "symfony/debug-bundle": "<5.0 || >=5.1",
+        "symfony/dependency-injection": "<5.0 || >=5.1",
+        "symfony/doctrine-bridge": "<5.0 || >=5.1",
+        "symfony/dom-crawler": "<5.0 || >=5.1",
+        "symfony/dotenv": "<5.0 || >=5.1",
+        "symfony/error-handler": "<5.0 || >=5.1",
+        "symfony/event-dispatcher": "<5.0 || >=5.1",
+        "symfony/expression-language": "<5.0 || >=5.1",
+        "symfony/filesystem": "<5.0 || >=5.1",
+        "symfony/finder": "<5.0 || >=5.1",
+        "symfony/form": "<5.0 || >=5.1",
+        "symfony/framework-bundle": "<5.0 || >=5.1",
+        "symfony/google-mailer": "<5.0 || >=5.1",
+        "symfony/http-client": "<5.0 || >=5.1",
+        "symfony/http-foundation": "<5.0 || >=5.1",
+        "symfony/http-kernel": "<5.0 || >=5.1",
+        "symfony/inflector": "<5.0 || >=5.1",
+        "symfony/intl": "<5.0 || >=5.1",
+        "symfony/ldap": "<5.0 || >=5.1",
+        "symfony/lock": "<5.0 || >=5.1",
+        "symfony/mailchimp-mailer": "<5.0 || >=5.1",
+        "symfony/mailer": "<5.0 || >=5.1",
+        "symfony/mailgun-mailer": "<5.0 || >=5.1",
+        "symfony/messenger": "<5.0 || >=5.1",
+        "symfony/mime": "<5.0 || >=5.1",
+        "symfony/monolog-bridge": "<5.0 || >=5.1",
+        "symfony/nexmo-notifier": "<5.0 || >=5.1",
+        "symfony/notifier": "<5.0 || >=5.1",
+        "symfony/options-resolver": "<5.0 || >=5.1",
+        "symfony/postmark-mailer": "<5.0 || >=5.1",
+        "symfony/process": "<5.0 || >=5.1",
+        "symfony/property-access": "<5.0 || >=5.1",
+        "symfony/property-info": "<5.0 || >=5.1",
+        "symfony/proxy-manager-bridge": "<5.0 || >=5.1",
+        "symfony/routing": "<5.0 || >=5.1",
+        "symfony/security": "<5.0 || >=5.1",
+        "symfony/security-bundle": "<5.0 || >=5.1",
+        "symfony/security-core": "<5.0 || >=5.1",
+        "symfony/security-csrf": "<5.0 || >=5.1",
+        "symfony/security-guard": "<5.0 || >=5.1",
+        "symfony/security-http": "<5.0 || >=5.1",
+        "symfony/sendgrid-mailer": "<5.0 || >=5.1",
+        "symfony/serializer": "<5.0 || >=5.1",
+        "symfony/slack-notifier": "<5.0 || >=5.1",
+        "symfony/stopwatch": "<5.0 || >=5.1",
+        "symfony/string": "<5.0 || >=5.1",
+        "symfony/telegram-notifier": "<5.0 || >=5.1",
+        "symfony/templating": "<5.0 || >=5.1",
+        "symfony/translation": "<5.0 || >=5.1",
+        "symfony/twig-bridge": "<5.0 || >=5.1",
+        "symfony/twig-bundle": "<5.0 || >=5.1",
+        "symfony/twilio-notifier": "<5.0 || >=5.1",
+        "symfony/validator": "<5.0 || >=5.1",
+        "symfony/var-dumper": "<5.0 || >=5.1",
+        "symfony/var-exporter": "<5.0 || >=5.1",
+        "symfony/web-link": "<5.0 || >=5.1",
+        "symfony/web-profiler-bundle": "<5.0 || >=5.1",
+        "symfony/workflow": "<5.0 || >=5.1",
+        "symfony/yaml": "<5.0 || >=5.1"
     }
 }
