--- a/composer.json
+++ b/composer.json
@@ -10,115 +10,127 @@
     ],
     "require": [],
     "conflict": {
-        "symfony/all-my-sms-notifier": "<5.3 || >=5.4",
-        "symfony/amazon-mailer": "<5.3 || >=5.4",
-        "symfony/amazon-sqs-messenger": "<5.3 || >=5.4",
-        "symfony/amqp-messenger": "<5.3 || >=5.4",
-        "symfony/asset": "<5.3 || >=5.4",
-        "symfony/beanstalkd-messenger": "<5.3 || >=5.4",
-        "symfony/browser-kit": "<5.3 || >=5.4",
-        "symfony/cache": "<5.3 || >=5.4",
-        "symfony/clickatell-notifier": "<5.3 || >=5.4",
-        "symfony/config": "<5.3 || >=5.4",
-        "symfony/console": "<5.3 || >=5.4",
-        "symfony/crowdin-translation-provider": "<5.3 || >=5.4",
-        "symfony/css-selector": "<5.3 || >=5.4",
-        "symfony/debug-bundle": "<5.3 || >=5.4",
-        "symfony/dependency-injection": "<5.3 || >=5.4",
-        "symfony/discord-notifier": "<5.3 || >=5.4",
-        "symfony/doctrine-bridge": "<5.3 || >=5.4",
-        "symfony/doctrine-messenger": "<5.3 || >=5.4",
-        "symfony/dom-crawler": "<5.3 || >=5.4",
-        "symfony/dotenv": "<5.3 || >=5.4",
-        "symfony/error-handler": "<5.3 || >=5.4",
-        "symfony/esendex-notifier": "<5.3 || >=5.4",
-        "symfony/event-dispatcher": "<5.3 || >=5.4",
-        "symfony/expression-language": "<5.3 || >=5.4",
-        "symfony/fake-chat-notifier": "<5.3 || >=5.4",
-        "symfony/fake-sms-notifier": "<5.3 || >=5.4",
-        "symfony/filesystem": "<5.3 || >=5.4",
-        "symfony/finder": "<5.3 || >=5.4",
-        "symfony/firebase-notifier": "<5.3 || >=5.4",
-        "symfony/form": "<5.3 || >=5.4",
-        "symfony/framework-bundle": "<5.3 || >=5.4",
-        "symfony/free-mobile-notifier": "<5.3 || >=5.4",
-        "symfony/gateway-api-notifier": "<5.3 || >=5.4",
-        "symfony/gitter-notifier": "<5.3 || >=5.4",
-        "symfony/google-chat-notifier": "<5.3 || >=5.4",
-        "symfony/google-mailer": "<5.3 || >=5.4",
-        "symfony/http-client": "<5.3 || >=5.4",
-        "symfony/http-foundation": "<5.3 || >=5.4",
-        "symfony/http-kernel": "<5.3 || >=5.4",
-        "symfony/inflector": "<5.3 || >=5.4",
-        "symfony/infobip-notifier": "<5.3 || >=5.4",
-        "symfony/intl": "<5.3 || >=5.4",
-        "symfony/iqsms-notifier": "<5.3 || >=5.4",
-        "symfony/ldap": "<5.3 || >=5.4",
-        "symfony/light-sms-notifier": "<5.3 || >=5.4",
-        "symfony/linked-in-notifier": "<5.3 || >=5.4",
-        "symfony/lock": "<5.3 || >=5.4",
-        "symfony/loco-translation-provider": "<5.3 || >=5.4",
-        "symfony/lokalise-translation-provider": "<5.3 || >=5.4",
-        "symfony/mailchimp-mailer": "<5.3 || >=5.4",
-        "symfony/mailer": "<5.3 || >=5.4",
-        "symfony/mailgun-mailer": "<5.3 || >=5.4",
-        "symfony/mailjet-mailer": "<5.3 || >=5.4",
-        "symfony/mattermost-notifier": "<5.3 || >=5.4",
-        "symfony/mercure-notifier": "<5.3 || >=5.4",
-        "symfony/message-bird-notifier": "<5.3 || >=5.4",
-        "symfony/messenger": "<5.3 || >=5.4",
-        "symfony/microsoft-teams-notifier": "<5.3 || >=5.4",
-        "symfony/mime": "<5.3 || >=5.4",
-        "symfony/mobyt-notifier": "<5.3 || >=5.4",
-        "symfony/monolog-bridge": "<5.3 || >=5.4",
-        "symfony/nexmo-notifier": "<5.3 || >=5.4",
-        "symfony/notifier": "<5.3 || >=5.4",
-        "symfony/octopush-notifier": "<5.3 || >=5.4",
-        "symfony/options-resolver": "<5.3 || >=5.4",
-        "symfony/ovh-cloud-notifier": "<5.3 || >=5.4",
-        "symfony/password-hasher": "<5.3 || >=5.4",
-        "symfony/postmark-mailer": "<5.3 || >=5.4",
-        "symfony/process": "<5.3 || >=5.4",
-        "symfony/property-access": "<5.3 || >=5.4",
-        "symfony/property-info": "<5.3 || >=5.4",
-        "symfony/proxy-manager-bridge": "<5.3 || >=5.4",
-        "symfony/rate-limiter": "<5.3 || >=5.4",
-        "symfony/redis-messenger": "<5.3 || >=5.4",
-        "symfony/rocket-chat-notifier": "<5.3 || >=5.4",
-        "symfony/routing": "<5.3 || >=5.4",
-        "symfony/runtime": "<5.3 || >=5.4",
-        "symfony/security": "<5.3 || >=5.4",
-        "symfony/security-bundle": "<5.3 || >=5.4",
-        "symfony/security-core": "<5.3 || >=5.4",
-        "symfony/security-csrf": "<5.3 || >=5.4",
-        "symfony/security-guard": "<5.3 || >=5.4",
-        "symfony/security-http": "<5.3 || >=5.4",
-        "symfony/semaphore": "<5.3 || >=5.4",
-        "symfony/sendgrid-mailer": "<5.3 || >=5.4",
-        "symfony/sendinblue-mailer": "<5.3 || >=5.4",
-        "symfony/sendinblue-notifier": "<5.3 || >=5.4",
-        "symfony/serializer": "<5.3 || >=5.4",
-        "symfony/sinch-notifier": "<5.3 || >=5.4",
-        "symfony/slack-notifier": "<5.3 || >=5.4",
-        "symfony/sms-biuras-notifier": "<5.3 || >=5.4",
-        "symfony/smsapi-notifier": "<5.3 || >=5.4",
-        "symfony/spot-hit-notifier": "<5.3 || >=5.4",
-        "symfony/stopwatch": "<5.3 || >=5.4",
-        "symfony/string": "<5.3 || >=5.4",
-        "symfony/telegram-notifier": "<5.3 || >=5.4",
-        "symfony/templating": "<5.3 || >=5.4",
-        "symfony/translation": "<5.3 || >=5.4",
-        "symfony/twig-bridge": "<5.3 || >=5.4",
-        "symfony/twig-bundle": "<5.3 || >=5.4",
-        "symfony/twilio-notifier": "<5.3 || >=5.4",
-        "symfony/uid": "<5.3 || >=5.4",
-        "symfony/validator": "<5.3 || >=5.4",
-        "symfony/var-dumper": "<5.3 || >=5.4",
-        "symfony/var-exporter": "<5.3 || >=5.4",
-        "symfony/web-link": "<5.3 || >=5.4",
-        "symfony/web-profiler-bundle": "<5.3 || >=5.4",
-        "symfony/workflow": "<5.3 || >=5.4",
-        "symfony/yaml": "<5.3 || >=5.4",
-        "symfony/zulip-notifier": "<5.3 || >=5.4"
+        "symfony/all-my-sms-notifier": "<5.4 || >=5.5",
+        "symfony/amazon-mailer": "<5.4 || >=5.5",
+        "symfony/amazon-sns-notifier": "<5.4 || >=5.5",
+        "symfony/amazon-sqs-messenger": "<5.4 || >=5.5",
+        "symfony/amqp-messenger": "<5.4 || >=5.5",
+        "symfony/asset": "<5.4 || >=5.5",
+        "symfony/beanstalkd-messenger": "<5.4 || >=5.5",
+        "symfony/browser-kit": "<5.4 || >=5.5",
+        "symfony/cache": "<5.4 || >=5.5",
+        "symfony/clickatell-notifier": "<5.4 || >=5.5",
+        "symfony/config": "<5.4 || >=5.5",
+        "symfony/console": "<5.4 || >=5.5",
+        "symfony/crowdin-translation-provider": "<5.4 || >=5.5",
+        "symfony/css-selector": "<5.4 || >=5.5",
+        "symfony/debug-bundle": "<5.4 || >=5.5",
+        "symfony/dependency-injection": "<5.4 || >=5.5",
+        "symfony/discord-notifier": "<5.4 || >=5.5",
+        "symfony/doctrine-bridge": "<5.4 || >=5.5",
+        "symfony/doctrine-messenger": "<5.4 || >=5.5",
+        "symfony/dom-crawler": "<5.4 || >=5.5",
+        "symfony/dotenv": "<5.4 || >=5.5",
+        "symfony/error-handler": "<5.4 || >=5.5",
+        "symfony/esendex-notifier": "<5.4 || >=5.5",
+        "symfony/event-dispatcher": "<5.4 || >=5.5",
+        "symfony/expo-notifier": "<5.4 || >=5.5",
+        "symfony/expression-language": "<5.4 || >=5.5",
+        "symfony/fake-chat-notifier": "<5.4 || >=5.5",
+        "symfony/fake-sms-notifier": "<5.4 || >=5.5",
+        "symfony/filesystem": "<5.4 || >=5.5",
+        "symfony/finder": "<5.4 || >=5.5",
+        "symfony/firebase-notifier": "<5.4 || >=5.5",
+        "symfony/form": "<5.4 || >=5.5",
+        "symfony/framework-bundle": "<5.4 || >=5.5",
+        "symfony/free-mobile-notifier": "<5.4 || >=5.5",
+        "symfony/gateway-api-notifier": "<5.4 || >=5.5",
+        "symfony/gitter-notifier": "<5.4 || >=5.5",
+        "symfony/google-chat-notifier": "<5.4 || >=5.5",
+        "symfony/google-mailer": "<5.4 || >=5.5",
+        "symfony/http-client": "<5.4 || >=5.5",
+        "symfony/http-foundation": "<5.4 || >=5.5",
+        "symfony/http-kernel": "<5.4 || >=5.5",
+        "symfony/inflector": "<5.4 || >=5.5",
+        "symfony/infobip-notifier": "<5.4 || >=5.5",
+        "symfony/intl": "<5.4 || >=5.5",
+        "symfony/iqsms-notifier": "<5.4 || >=5.5",
+        "symfony/ldap": "<5.4 || >=5.5",
+        "symfony/light-sms-notifier": "<5.4 || >=5.5",
+        "symfony/linked-in-notifier": "<5.4 || >=5.5",
+        "symfony/lock": "<5.4 || >=5.5",
+        "symfony/loco-translation-provider": "<5.4 || >=5.5",
+        "symfony/lokalise-translation-provider": "<5.4 || >=5.5",
+        "symfony/mailchimp-mailer": "<5.4 || >=5.5",
+        "symfony/mailer": "<5.4 || >=5.5",
+        "symfony/mailgun-mailer": "<5.4 || >=5.5",
+        "symfony/mailjet-mailer": "<5.4 || >=5.5",
+        "symfony/mailjet-notifier": "<5.4 || >=5.5",
+        "symfony/mattermost-notifier": "<5.4 || >=5.5",
+        "symfony/mercure-notifier": "<5.4 || >=5.5",
+        "symfony/message-bird-notifier": "<5.4 || >=5.5",
+        "symfony/message-media-notifier": "<5.4 || >=5.5",
+        "symfony/messenger": "<5.4 || >=5.5",
+        "symfony/microsoft-teams-notifier": "<5.4 || >=5.5",
+        "symfony/mime": "<5.4 || >=5.5",
+        "symfony/mobyt-notifier": "<5.4 || >=5.5",
+        "symfony/monolog-bridge": "<5.4 || >=5.5",
+        "symfony/nexmo-notifier": "<5.4 || >=5.5",
+        "symfony/notifier": "<5.4 || >=5.5",
+        "symfony/octopush-notifier": "<5.4 || >=5.5",
+        "symfony/oh-my-smtp-mailer": "<5.4 || >=5.5",
+        "symfony/one-signal-notifier": "<5.4 || >=5.5",
+        "symfony/options-resolver": "<5.4 || >=5.5",
+        "symfony/ovh-cloud-notifier": "<5.4 || >=5.5",
+        "symfony/password-hasher": "<5.4 || >=5.5",
+        "symfony/postmark-mailer": "<5.4 || >=5.5",
+        "symfony/process": "<5.4 || >=5.5",
+        "symfony/property-access": "<5.4 || >=5.5",
+        "symfony/property-info": "<5.4 || >=5.5",
+        "symfony/proxy-manager-bridge": "<5.4 || >=5.5",
+        "symfony/rate-limiter": "<5.4 || >=5.5",
+        "symfony/redis-messenger": "<5.4 || >=5.5",
+        "symfony/rocket-chat-notifier": "<5.4 || >=5.5",
+        "symfony/routing": "<5.4 || >=5.5",
+        "symfony/runtime": "<5.4 || >=5.5",
+        "symfony/security": "<5.4 || >=5.5",
+        "symfony/security-bundle": "<5.4 || >=5.5",
+        "symfony/security-core": "<5.4 || >=5.5",
+        "symfony/security-csrf": "<5.4 || >=5.5",
+        "symfony/security-guard": "<5.4 || >=5.5",
+        "symfony/security-http": "<5.4 || >=5.5",
+        "symfony/semaphore": "<5.4 || >=5.5",
+        "symfony/sendgrid-mailer": "<5.4 || >=5.5",
+        "symfony/sendinblue-mailer": "<5.4 || >=5.5",
+        "symfony/sendinblue-notifier": "<5.4 || >=5.5",
+        "symfony/serializer": "<5.4 || >=5.5",
+        "symfony/sinch-notifier": "<5.4 || >=5.5",
+        "symfony/slack-notifier": "<5.4 || >=5.5",
+        "symfony/sms-biuras-notifier": "<5.4 || >=5.5",
+        "symfony/sms77-notifier": "<5.4 || >=5.5",
+        "symfony/smsapi-notifier": "<5.4 || >=5.5",
+        "symfony/smsc-notifier": "<5.4 || >=5.5",
+        "symfony/spot-hit-notifier": "<5.4 || >=5.5",
+        "symfony/stopwatch": "<5.4 || >=5.5",
+        "symfony/string": "<5.4 || >=5.5",
+        "symfony/telegram-notifier": "<5.4 || >=5.5",
+        "symfony/telnyx-notifier": "<5.4 || >=5.5",
+        "symfony/templating": "<5.4 || >=5.5",
+        "symfony/translation": "<5.4 || >=5.5",
+        "symfony/turbo-sms-notifier": "<5.4 || >=5.5",
+        "symfony/twig-bridge": "<5.4 || >=5.5",
+        "symfony/twig-bundle": "<5.4 || >=5.5",
+        "symfony/twilio-notifier": "<5.4 || >=5.5",
+        "symfony/uid": "<5.4 || >=5.5",
+        "symfony/validator": "<5.4 || >=5.5",
+        "symfony/var-dumper": "<5.4 || >=5.5",
+        "symfony/var-exporter": "<5.4 || >=5.5",
+        "symfony/vonage-notifier": "<5.4 || >=5.5",
+        "symfony/web-link": "<5.4 || >=5.5",
+        "symfony/web-profiler-bundle": "<5.4 || >=5.5",
+        "symfony/workflow": "<5.4 || >=5.5",
+        "symfony/yaml": "<5.4 || >=5.5",
+        "symfony/yunpian-notifier": "<5.4 || >=5.5",
+        "symfony/zulip-notifier": "<5.4 || >=5.5"
     }
 }
